--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -7,3 +7,9 @@
 .d-100 {
     height: 100vh;
 }
+
+.hero-img {
+    background-image: url("../img/hero-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
