--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -1,7 +1,7 @@
 
 :root {
     --primary: rgb(251, 0, 255);
-    --secondary: rgb(30, 30, 30);
+    --secondary: rgb(58, 58, 58);
 }
 
 /* Scrollbar Styling */
@@ -33,8 +33,24 @@
     height: 100vh;
 }
 
+.btn-primary-c {
+  background-color: var(--primary) !important;
+}
+
 .hero-img {
     background-image: url("../img/hero-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.highlight-nav {
+  border: solid 1px #000 !important;
+  border-radius: 10px;
+  background-color: var(--primary);
+}
+
+.highlight-nav:hover {
+  border: solid 1px #000 !important;
+  border-radius: 10px;
+  background-color: var(--secondary);
 }
