added interactiveity on hover

--- a/Combined/app/static/css/main.css
+++ b/Combined/app/static/css/main.css
@@ -36,6 +36,17 @@
   background-color: var(--secondary) !important;
   color: var(--primary) !important;
 }
+#particles-js{
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* z-index: -1; */
+  /* background-color: yellow; */
+
+}
 /* 
 .hero-img {
     background-image: url("../img/hero-bg.jpg");
