--- a/Combined/app/templates/index.html
+++ b/Combined/app/templates/index.html
@@ -15,13 +15,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
         defer></script>
-        <script src="{{url_for('static',filename = 'js/particles.js')}}"></script>
+        <script src="{{url_for('static',filename = 'js/particles.min.js')}}"></script>
 </head>
 
 <body>
     <!-- <canvas class="background"> -->
-    <canvas class="background"></canvas>
+    <!-- <canvas class="background"></canvas> -->
     <!-- <div class="container"> -->
+        <div id="particles-js"></div>
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow" aria-label="Navbar">
         <div class="container-fluid px-5">
             <img src="static/img/blackbglogosmall.png" alt="logo" width="50" height="50">
@@ -78,7 +80,7 @@
     </footer>
 <!-- </canvas> -->
 <!-- </div> -->
-    <script src="{{url_for('static',filename = 'js/test.js')}}"></script>
+    <script src="{{url_for('static',filename = 'js/particle.js')}}"></script>
 
 </body>
 
