--- a/Combined/app/templates/researchers.html
+++ b/Combined/app/templates/researchers.html
@@ -15,8 +15,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
         defer></script>
-    <!-- <script src="{{url_for('static',filename = 'js/neovs.js')}}"></script> -->
-    <script src='../static/js/neovs.js'></script>
 </head>
 
 <body>
@@ -71,6 +69,7 @@
                         <input type="number" class="form-control" id="scopusIDForm">
                         -->
                     </div>
+                    {{ form1.addremoveupdate() }}{{ form1.addremoveupdate.Add }}{{ form1.addremoveupdate.Remove }}{{ form1.addremoveupdate.Update }}
                     {{ form1.senior() }}{{ form1.senior.label }}
                     {{ form1.submit() }}
                     <!--<button id="addKeyBtn" type="submit" class="btn btn-primary-c">Submit</button>
@@ -93,26 +92,6 @@
                     -->
                 </form>
             </div>
-
-            <div>
-                <h4 class="text-dark">Enter Port Number</h4>
-                <form class="mb-5 border border-dark rounded shadow p-3">
-                    <div class="mb-3">
-                        <input type="number" id="portNumber">
-                    </div>
-                    <input type="submit" id='port'  onclick="getPort()">
-                </form>
-            </div>
-            <div>
-                <h4 class="text-dark">Enter Port Number</h4>
-                <form class="mb-5 border border-dark rounded shadow p-3">
-                    <div class="mb-3">
-                        <input type="password" id="password">
-                    </div>
-                    <input type="submit" onclick="getPassword()">
-                </form>
-            </div>
-            
     </section>
 
     <footer class="border-top">
