--- a/Combined/app/templates/researchers.html
+++ b/Combined/app/templates/researchers.html
@@ -15,6 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
         defer></script>
+        <script src='../static/js/neovs.js'></script>
+
 </head>
 
 <body>
@@ -90,6 +92,29 @@
                     {{ form2.submit() }}
                     <!--<button id="addKeyBtn" type="submit" class="btn btn-primary-c">Submit</button>
                     -->
+                </form>
+            </div>
+            <div>
+                <h4 class="text-dark">Enter Port Number</h4>
+                <form class="mb-5 border border-dark rounded shadow p-3">
+                    <div class="mb-3">
+                        <input type="number" id="portNumber">
+                    </div>
+                    <input type="button" id="port_submit"  value="Submit">
+
+                    <!-- <input type="submit" id='port'  onclick="getPort()"> -->
+                </form>
+            </div>
+            <div>
+                <h4 class="text-dark">Enter password</h4>
+                <form class="mb-5 border border-dark rounded shadow p-3">
+                    <div class="mb-3">
+                        <input type="password" id="password">
+                    </div>
+                    <!-- <button id="hellobutton">Hello</button> -->
+                    <input type="button" id="password_submit"  value="Submit">
+
+                    <!-- <input type="submit" onclick="getPassword()"> -->
                 </form>
             </div>
     </section>
