update form text

--- a/Combined/app/templates/researchers.html
+++ b/Combined/app/templates/researchers.html
@@ -61,7 +61,7 @@
             <!--Table Display -->
             <div>
                 <h4 class="text-dark">Add Researcher</h4>
-                <form class="mb-5 border border-dark rounded shadow p-3" action="" method="post">
+                <form class="mb-5 border border-dark rounded shadow p-3 text-dark" action="" method="post">
                     {{ form1.hidden_tag() }}
                     <div class="mb-3">
                         {{ form1.researcher.label }}<br>
@@ -79,7 +79,7 @@
             </div>
             <div>
                 <h4 class="text-dark">Change Scopus API Key</h4>
-                <form class="mb-5 border border-dark rounded shadow p-3" action="" method="post">
+                <form class="mb-5 border border-dark rounded shadow p-3 text-dark" action="" method="post">
                     {{ form2.hidden_tag() }}
                     <div class="mb-3">
                         {{ form2.APIKey.label }}<br>
