remove port and password form fields

--- a/Combined/app/templates/researchers.html
+++ b/Combined/app/templates/researchers.html
@@ -93,30 +93,30 @@
                     -->
                 </form>
             </div>
-
+<!-- 
             <div>
                 <h4 class="text-dark">Enter Port Number</h4>
                 <form class="mb-5 border border-dark rounded shadow p-3">
                     <div class="mb-3">
                         <input type="number" id="portNumber">
                     </div>
-                    <input type="button" id="port_submit" value="Submit">
+                    <input type="button" id="port_submit" value="Submit"> -->
 
                     <!-- <input type="submit" id='port'  onclick="getPort()"> -->
-                </form>
+                <!-- </form>
             </div>
             <div>
                 <h4 class="text-dark">Enter password</h4>
                 <form class="mb-5 border border-dark rounded shadow p-3">
                     <div class="mb-3">
                         <input type="password" id="password">
-                    </div>
+                    </div> -->
                     <!-- <button id="hellobutton">Hello</button> -->
-                    <input type="button" id="password_submit" value="Submit">
+                    <!-- <input type="button" id="password_submit" value="Submit"> -->
 
                     <!-- <input type="submit" onclick="getPassword()"> -->
-                </form>
-            </div>
+                <!-- </form>
+            </div> -->
     </section>
 
     <footer class="border-top">
