--- a/Combined/app/static/css/tool.css
+++ b/Combined/app/static/css/tool.css
@@ -79,8 +79,7 @@
 
 .bigcheckbox {
     position: relative;
-    left: 250px;
-    top: 240px;
+    top: 6px;
     height: 20px;
     width: 20px;
     border-radius: 4px;
@@ -89,11 +88,22 @@
 }
 
 .degreelabel {
-    position: absolute;
-    top: 74px;
-    left:  900px;
-    font-size: 14px;
+    position: relative;
+    font-size: 12px;
     color: rgb(36, 36, 36)
+}
+
+.helpbutton {
+    margin-left: 4px;
+    background-color: rgb(36, 36, 36);
+    color:rgb(245, 241, 241);
+    border-radius: 2px;
+    height: 24px; 
+}
+
+.helpbutton:hover {
+    background-color: rgb(146, 144, 144);
+    cursor: pointer;
 }
 
 /* The canvas for displaying the network graph */
@@ -172,6 +182,43 @@ tr:nth-child(odd) {background-color: #f2f2f2;}
     background-color: rgb(146, 144, 144);
     cursor: pointer;
 }
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 /* END OF PAGE CONTENT FORMATTING */
 
