--- a/Combined/app/templates/tool.html
+++ b/Combined/app/templates/tool.html
@@ -27,6 +27,7 @@
             <button onclick="newDraw()" class="searchbutton">Search</button>
             <input type="checkbox" id="secondDegree" class="bigcheckbox">
             <label for="secondDegree" class="degreelabel">Second Degree Connections</label>
+            <button id="myBtn" class="helpbutton">Help</button>
         </div>
         <div class="graphingtool">
             <div class="left" id="viz"></div>
@@ -113,11 +114,48 @@
             </div>
         </div>
     </div>
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Some text in the Modal..</p>
+        </div>
+      
+    </div>
     <!-- FOOTER -->
     <div class="footer">
         <p class="groupnames">&copy; Cam, Harry, Kane, Adam, Callum, Maaz</p>
         <p>Team 43 - Network Mapper - CITS3200 - University of Western Australia</p>
     </div>
 </body>
+
+<script>
+        // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on the button, open the modal
+    btn.onclick = function() {
+    modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+    modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+    }
+</script>
 
 </html>
