updated Help feature on Tool page

--- a/Combined/app/templates/tool.html
+++ b/Combined/app/templates/tool.html
@@ -119,7 +119,12 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>
-          <p>Some text in the Modal..</p>
+          <p><b>Getting Started</b></p>
+          <p>1. Enter a Scopus ID in the search box and click 'Search'</p>
+          <p>2. This will give you a network with all of the corresponding Scopus IDs who have worked with your initial researcher.</p>
+          <p>3. Click on a researcher to see their information displayed in a table on the right side of the page.</p>
+          <p>4. Choose to expand the network to display this researcher's network by selecting 'Expand' and clicking 'Update'. <i>please allow a few seconds for the graph to update</i></p>
+          <p>5. Choose to view this researcher's work, their publications, by selecting 'Publications' and clicking 'Update'. Their works will be displayed as nodes on the graph for you to click on.</p>
         </div>
       
     </div>
@@ -131,7 +136,7 @@
 </body>
 
 <script>
-        // Get the modal
+    // Get the modal
     var modal = document.getElementById("myModal");
 
     // Get the button that opens the modal
