--- a/Combined/app/static/css/index.css
+++ b/Combined/app/static/css/index.css
@@ -20,6 +20,14 @@
   font-size: 15px;
 }
 
+#particles-js {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 /* aligns the regular nav page elements to the right of the screen */
 li { float: right; }
 
