--- a/Combined/app/templates/researchers.html
+++ b/Combined/app/templates/researchers.html
@@ -47,8 +47,12 @@
                             -->
                         </div>
                         {{ form1.addremoveupdate() }}{{ form1.addremoveupdate.Add }}{{ form1.addremoveupdate.Remove }}{{ form1.addremoveupdate.Update }}
-                        {{ form1.senior() }}{{ form1.senior.label }}
-                        {{ form1.submit() }}
+                        <div>
+                            {{ form1.senior() }}{{ form1.senior.label }}
+                        </div>
+                        <div>
+                            {{ form1.submit() }}
+                        </div>
                         <!--<button id="addKeyBtn" type="submit" class="btn btn-primary-c">Submit</button>
                         -->
                     </form>
