--- a/Combined/app/templates/researchers.html
+++ b/Combined/app/templates/researchers.html
@@ -39,7 +39,7 @@
                 <div class="form-class">
                     <form class="addresearcher" action="" method="post">
                         {{ form1.hidden_tag() }}
-                        <div>
+                        <div class="researcherlabel">
                             {{ form1.researcher.label }}<br>
                             {{ form1.researcher(size=32) }}
                             <!--<label for="scopusIDForm" class="form-label text-dark">Scopus ID</label>
