Senior bug fixes

--- a/Combined/app/templates/tool.html
+++ b/Combined/app/templates/tool.html
@@ -72,7 +72,7 @@
                         <td id="projectPublisher"></td>
                     </tr>
                     <tr>
-                        <td>Project ID</td>
+                        <td>Project id</td>
                         <td id="projectID"></td>
                     </tr>
                     <tr>
@@ -92,8 +92,8 @@
                     <a id="pub" hidden></a>
                     <a id="pubRes" hidden></a>
                     <input type="checkbox" id="projectExpansion">
-                    <label for="projectExpansion" class="loadlabels"> Expand </label>
-                    <button onclick="draw()" class="loadbutton"> Update Graph </button>
+                    <label for="projectExpansion"> Expand </label>
+                    <button onclick="draw()" class="loadbutton"> Search </button>
                 </div>
                 <div id="download" hidden>
                     <h4 class="text-dark">Expand Researcher</h4>
