fix scroll issue

--- a/Combined/app/templates/index.html
+++ b/Combined/app/templates/index.html
@@ -9,7 +9,7 @@
     <script src="{{url_for('static',filename = 'js/particles.min.js')}}"></script>
 </head>
 
-<body>
+<body style="overflow-y: hidden;">
     <div id="particles-js"></div>
 
     <div>
